syntax = "proto3";

package product;

option go_package = "./pkg/pb";

service ProductService {
    rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse) {}
    rpc FindOne(FindOneRequest) returns (FindOneResponse) {}
}

message CreateProductRequest {
    string name = 1;
    int64 price = 2;
    int64 total = 3;
}

message CreateProductResponse {
    int64 status = 1;
    string error = 2;
    int64 id = 3;
}

message FindOneData {
    int64 id = 1;
    string name = 2;
    int64 price = 3;
    int64 total = 4;
}

message FindOneRequest {
    int64 id = 1;
}

message FindOneResponse {
    int64 status = 1;
    string error = 2;
    FindOneData data = 3;
}